css: Avoid gap after a last list item in detail views

--- a/public/css/common.less
+++ b/public/css/common.less
@@ -30,6 +30,15 @@
   padding: .5em;
 }
 
+.host-detail,
+.service-detail {
+  .item-list .list-item:last-of-type .caption {
+    min-height: 1.5em;
+    max-height: 3em;
+    height: auto;
+  }
+}
+
 .pagination-control {
   float: none;
 }
